--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,11 @@ theme_settings:
 
   # Header and footer text
   header_text: >
-     <p>Hi! Welcome to my blog! My name is Hyun A, Lee and I'm a Hanyang Univ(ERICA) student.</p>
+     <p>Hi! Welcome to my blog! My name is Hyun A, Lee </p> 
+     <p>and I'm a Hanyang Univ(ERICA) student.</p>
 
-     <p>My blog shows the activities I did. Have fun!</p>
+     <p>My blog shows the activities I did.</p>
+     <p>Have fun!</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
