--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ theme_settings:
   # Header and footer text
   header_text: >
      <p>Hi! Welcome to my blog! My name is Hyun A, Lee </p> 
-     <p>and I'm a Hanyang Univ(ERICA) student.</p>
+     <p>and I'm a student at Hanyang Univ(ERICA).</p>
 
      <p>My blog shows the activities I did.</p>
      <p>Have fun!</p>
