--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ theme_settings:
 
   # Header and footer text
   header_text: >
-     <p>Hi! Welcome to my blog! My name is Hyun A, Lee </p> 
-     <p>and I'm a student at Hanyang Univ(ERICA).</p>
+     <p>Hi! Welcome to my blog!</p> 
+     <p> My name is Hyun A, Lee and I'm a student at Hanyang Univ(ERICA).</p>
 
      <p>My blog shows the activities I did.</p>
      <p>Have fun!</p>
